--- a/config/dev/deployment.yaml
+++ b/config/dev/deployment.yaml
@@ -1,10 +1,10 @@
-apiVersion: apps/v1
-kind: Deployment
+apiVersion: argoproj.io/v1alpha1 # Changed from apps/v1
+kind: Rollout # Changed from Deployment
+# ----- Everything below this comment is the same as a deployment -----
 metadata:
   name: test
 spec:
-  replicas: 1
-  revisionHistoryLimit: 3
+  replicas: 5
   selector:
     matchLabels:
       app: test
@@ -14,7 +14,15 @@ spec:
         app: test
     spec:
       containers:
-      - image: eltincho89/argo-poc-x11:4.0
-        name: test
+      - name: test
+        image: eltincho89/argo-poc-x11:4.0
         ports:
         - containerPort: 80
+  minReadySeconds: 30
+  revisionHistoryLimit: 3
+  strategy:
+  # ----- Everything above this comment are the same as a deployment -----
+    canary: # A new field that used to provide configurable options for a Canary strategy
+      steps:
+      - setWeight: 20
+      - pause: {}
