--- a/config/dev/deployment.yaml
+++ b/config/dev/deployment.yaml
@@ -24,5 +24,8 @@ spec:
   # ----- Everything above this comment are the same as a deployment -----
     canary: # A new field that used to provide configurable options for a Canary strategy
       steps:
-      - setWeight: 1
+      - setWeight: 20
+      - pause: 
+        duration: 10
+      - setWeight: 0
       - pause: {}
