--- a/config/dev/svc.yaml
+++ b/config/dev/svc.yaml
@@ -9,3 +9,15 @@ spec:
     targetPort: 80
   selector:
     app: test
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: test1
+spec:
+  type: LoadBalancer
+  ports:
+  - port: 80
+    targetPort: 80
+  selector:
+    app: test1
