--- a/config/dev/deployment.yaml
+++ b/config/dev/deployment.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
       - name: test
-        image: eltincho89/argo-poc-x11:9.0
+        image: eltincho89/argo-poc-x11:dev
         ports:
         - containerPort: 80
   minReadySeconds: 30
